syntax = "proto3";

package user;

option go_package = "./user";

message User {
    int64 id = 1;
    string fname = 2;
    string city = 3;
    int64 phone = 4;
    float height = 5;
    bool Married = 6;
}

message Users {
    repeated User users = 1;
}

message UserID {
    int64 userID = 1;
}

message EmptyParams {}

message UserIDList {
    repeated int64 userIDList = 1;
}

service UserService {
    rpc GetUsers(EmptyParams) returns (Users) {}
    rpc GetUser(UserID) returns (User) {}
    rpc GetUsersWithIds(UserIDList) returns (Users) {}
}



